# learntrack

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  render.yaml
backend/: Dockerfile  phase1_auth_test_report.json  phase2_learning_flow_report.json  pyproject.toml  render.yaml  requirements.txt
backend/app/: bootstrap.py  main.py
backend/app/agents/: __init__.py
backend/app/agents/graph/: __init__.py  edges.py  nodes.py  question_generator_graph.py  state.py
backend/app/agents/prompts/: __init__.py
backend/app/agents/rag/: __init__.py  graph.py  nodes.py
backend/app/agents/streaming/: sse_handler.py
backend/app/agents/tools/: material_retriever.py  web_search_tool.py
backend/app/ai/: __init__.py  custom_adapters.py  factory.py  litellm_provider.py  litellm_runtime.py  runtime.py  structured_outputs.py
backend/app/ai/models/: cost_tracking.py
backend/app/api/v1/: api.py  (+1 more)
backend/app/core/: ai_models_config.py  audit_middleware.py  config.py  database.py  dependencies.py  encryption.py  enhanced_auth.py  exceptions.py  health.py  impersonation_store.py  posthog.py  prompt_manager.py  rate_limit.py  realtime.py  security_middleware.py  utils.py
backend/app/migrations/: __init__.py
backend/app/models/: admin.py  assignment.py  assignment_template.py  audit_log.py  conversation.py  cost_tracking.py  file.py  generation_session.py  invitation.py  material.py  message.py  progress.py  question.py  rag.py  responses.py  settings.py  student.py  subject.py  tenant_ai_config.py  user.py
backend/app/prompts/: formatter.txt  group_image_prompts.py  prompt_analyzer.txt  question_editor.txt  question_generator.txt  question_validator.txt  simple_question_generator.txt  simple_question_validator.txt  text_extraction.txt
backend/app/rag/: __init__.py
backend/app/services/: assignment_service.py  assignment_template_service.py  audit_log_service.py  conversation_service.py  cost_tracking_service.py  document_governance_service.py  email_service.py  enhanced_document_processor.py  file_service.py  generation_session_service.py  image_generation_service.py  invitation_service.py  local_embedding_service.py  material_service.py  message_service.py  notification_service.py  progress_service.py  question_service.py  r2_storage_service.py  rag_service.py  semantic_chunker.py  settings_service.py  student_service.py  subject_service.py  tenant_ai_config_service.py  uploadthing_service.py  user_service.py  visibility_service.py
backend/app/websocket/: __init__.py  events.py  socket_manager.py
backend/migrations/: 001_ai_enhancements.py  002_enable_tenant_byok.py  __init__.py
backend/tests/: __init__.py  conftest.py  test_admin_tenants.py  test_conversation_service.py  test_generation_session_service.py  test_impersonation_store.py  test_invitation_service.py  test_phase1_auth.py  test_phase2_learning.py  test_progress_service.py  test_question_service.py  test_services.py
(+278 files in other folders)
