[project]
name = "learntrack-api"
version = "0.1.0"
description = "LearnTrack API - AI-powered tutoring platform"
requires-python = ">=3.11,<3.13"
dependencies = [
    # FastAPI and ASGI server
    "fastapi>=0.109.0,<0.115.0",
    "uvicorn[standard]>=0.27.0,<0.32.0",
    # Database
    "pymongo>=4.6.0,<5.0.0",
    "motor>=3.3.0,<4.0.0",
    # Authentication - Clerk
    "clerk-backend-api>=1.0.0,<2.0.0",
    "python-multipart>=0.0.6,<0.1.0",
    "PyJWT>=2.8.0,<3.0.0",
    "cryptography>=42.0.0,<44.0.0",
    # Environment and Configuration
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic[email]>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    # AI Providers
    "openai>=1.12.0,<2.0.0",
    "anthropic>=0.18.0,<1.0.0",
    "google-generativeai>=0.4.0,<1.0.0",
    # LangChain for RAG (pinned to tested minor versions)
    "langchain>=0.3.0,<0.4.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-text-splitters>=0.3.0,<0.4.0",
    "langgraph>=0.2.0,<0.3.0",
    # CLI Tools
    "rich>=13.0.0,<14.0.0",
    # Vector Database (using prebuilt wheels to avoid grpcio-tools build issues)
    "qdrant-client>=1.7.0,<2.0.0",
    # Web Search
    "tavily-python>=0.3.0,<1.0.0",
    # HTTP Client
    "httpx>=0.26.0,<1.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    # Utilities
    "python-dateutil>=2.8.0,<3.0.0",
    "python-magic>=0.4.27,<0.5.0",
    "cachetools>=5.0.0,<6.0.0",
    # Semantic Chunking and ML
    "sentence-transformers>=2.7.0,<3.0.0",
    "scikit-learn>=1.4.0,<2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "torch>=2.0.0,<3.0.0",
    "transformers>=4.36.0,<5.0.0",
    # Logging
    "structlog>=24.1.0,<25.0.0",
    # Rate Limiting
    "slowapi>=0.1.9,<0.2.0",
    # Webhooks
    "svix==1.22.0",
    # WebSocket for real-time chat
    "python-socketio>=5.10.0,<6.0.0",
    "python-engineio>=4.9.0,<5.0.0",
    # Email provider
    "plunk>=0.0.1,<1.0.0",
    "langchain-experimental>=0.3.0,<0.4.0",
    "posthog>=7.9.12,<8.0.0",
    # Cloud Storage (Cloudflare R2 via S3-compatible API)
    "boto3>=1.34.0,<2.0.0",
    "langchain-docling>=0.2.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "black>=24.0.0,<25.0.0",
    "isort>=5.13.0,<6.0.0",
    "flake8>=7.0.0,<8.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-report=html:htmlcov --cov-fail-under=0"

[tool.coverage.run]
source = ["app"]
omit = ["app/agents/*", "app/bootstrap.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "pass",
]
